--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -1,201 +1,57 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"> 
-<head> 
-<title>Rideshare Admin</title> 
-<script type="text/javascript" src="http://www.google.com/jsapi?key=<%=GOOGLE_KEY%>"></script>
-<script type="text/javascript" src="/javascripts/actions.js"></script>
-
-<%= javascript_include_tag "prototype", "effects" %>
-
-<script type="text/javascript"> 
+<script type="text/javascript">
 	
-	google.load("maps", "2", {"other_params":"sensor=false"});
-	var map;
-	var geocoder;
-	var drivers;
-	var riders;
-	var locations;
-	var current_driver=-1;
-	var riders_done=<%=@riders_done%>;
-	var riders_size=<%=@riders.size%>;
-	var spaces=<%=@spaces%>;
-	var zIndex=9999999;
-	var icon;
-	//icons['driver']=new Array();
-	//icons['rider']=new Array();
-	
-	function initialize() {
-		map=new google.maps.Map2(document.getElementById("map"));
-		geocoder = new GClientGeocoder();
-		map.addControl(new GLargeMapControl());
-		map.enableScrollWheelZoom();
-		map.setCenter(new GLatLng(<%=@latitude_avg%>, <%=@longitude_avg%>), 11);
-		// only generate one icon, all the rest will be created by changing the image dynamically
-		icon=new GIcon(G_DEFAULT_ICON);
-		icon.image="/images/AD.png";
-		icon.shadow="/images/shadow.png";
-		icon.iconSize=new GSize(32, 32);
-		icon.shadowSize=new GSize(38, 32);
-		icon.imageMap=[2,10, 2,22, 10,30, 22,30, 30,22, 30,10, 22,2, 10,2];
-		/*icons['driver']['available']=new GIcon(G_DEFAULT_ICON);
-		icons['driver']['available'].image="/images/available-driver.png";
-		icons['driver']['available'].shadow="/images/shadow.png";
-		icons['driver']['available'].iconSize=new GSize(32, 32);
-		icons['driver']['available'].shadowSize=new GSize(38, 32);
-		icons['driver']['available'].imageMap=[2,10, 2,22, 10,30, 22,30, 30,22, 30,10, 22,2, 10,2];
-		icons['driver']['unavailable']=new GIcon(icons['driver']['available']);
-		icons['driver']['unavailable'].image="/images/unavailable-driver.png";
-		icons['driver']['selected']=new GIcon(icons['driver']['available']);
-		icons['driver']['selected'].image="/images/selected-driver.png";
-		icons['rider']['available']=new GIcon(icons['driver']['available']);
-		icons['rider']['available'].image="/images/available-rider.png";
-		icons['rider']['unavailable']=new GIcon(icons['driver']['available']);
-		icons['rider']['unavailable'].image="/images/unavailable-rider.png";
-		icons['rider']['selected']=new GIcon(icons['driver']['available']);
-		icons['rider']['selected'].image="/images/selected-rider.png";*/
-		drivers=new Object();
-		test=new Object();
-		<% @drivers.each do |driver| %>
-			<% i=driver.id %>
-			drivers[<%=i%>]=new Array();
-			//drivers[<%=i%>]['marker']=new GMarker(new GLatLng(<%=driver.latitude%>,<%=driver.longitude%>), {title: "<%=driver.person.full_name%>", zIndexProcess: doZIndex, icon: <%=(driver.numbercurrentpassengers.to_i < driver.number_passengers)?"icons['driver']['available']":"icons['driver']['unavailable']"%>});
-			//drivers[<%=i%>]['marker'].zIndex=zIndex--;
-			drivers[<%=i%>]['id']="<%=driver.id%>";
-			drivers[<%=i%>]['address1']="<%=driver.address1%>";
-			drivers[<%=i%>]['address2']="<%=driver.address2%>";
-			drivers[<%=i%>]['city']="<%=driver.city%>";
-			drivers[<%=i%>]['state']="<%=driver.state%>";
-			drivers[<%=i%>]['zip']="<%=driver.zip%>";
-			drivers[<%=i%>]['name']="<%=driver.person.full_name%>";
-			drivers[<%=i%>]['phone']="<%=driver.phone%>";
-			drivers[<%=i%>]['contact_method']="<%=driver.contact_method%>";
-			drivers[<%=i%>]['number_passengers']="<%=driver.number_passengers%>";
-			drivers[<%=i%>]['depart_time']="<%=driver.departureTime%>";
-			drivers[<%=i%>]['depart_time_nice']="<%=driver.departureTimeNice%>";
-			drivers[<%=i%>]['special_info']=<%=driver.special_info.to_json%>;
-			drivers[<%=i%>]['show']=true;
-			drivers[<%=i%>]['riders']=new Object();
-			<% driver.rides.each do |rider| %>
-				<% if driver.id != rider.id %>
-					drivers[<%=i%>]['riders'][<%=rider.id%>]=<%=rider.id%>;
-				<% end %>
-			<% end %>
-			// ADD RIDERS FOR DRIVERS
-			/*GEvent.addListener(drivers[<%=i%>]['marker'], "infowindowbeforeclose", function() {
-				drivers[<%=i%>]['marker'].zIndex=zIndex--;
-			});
-			drivers[<%=i%>]['marker'].bindInfoWindowHtml(makeInfoboxHTML('driver',<%=i%>));
-			map.addOverlay(drivers[<%=i%>]['marker']);*/
-		<% end %>
-		riders=new Object()
-		<% @riders.each do |rider| %>
-			<% i=rider.id %>
-			riders[<%=i%>]=new Array();
-			//riders[<%=i%>]['marker']=new GMarker(new GLatLng(<%=rider.latitude%>,<%=rider.longitude%>), {title: "<%=rider.person.full_name%>", zIndexProcess: doZIndex, icon: <%=(rider.driver_ride_id == 0)?"icons['rider']['available']":"icons['rider']['unavailable']"%>});
-			//riders[<%=i%>]['marker'].zIndex=zIndex--;
-			riders[<%=i%>]['id']="<%= rider.id %>";
-			riders[<%=i%>]['driverID']="<%= rider.driver_ride_id %>";
-			riders[<%=i%>]['address1']="<%= rider.address1 %>";
-			riders[<%=i%>]['address2']="<%= rider.address2 %>";
-			riders[<%=i%>]['city']="<%= rider.city %>";
-			riders[<%=i%>]['state']="<%= rider.state %>";
-			riders[<%=i%>]['zip']="<%= rider.zip %>";
-			riders[<%=i%>]['name']="<%= rider.person.full_name %>";
-			riders[<%=i%>]['phone']="<%= rider.phone %>";
-			riders[<%=i%>]['contact_method']="<%= rider.contact_method %>";
-			riders[<%=i%>]['depart_time']="<%= rider.departureTime%>";
-			riders[<%=i%>]['depart_time_nice']="<%= rider.departureTimeNice %>";
-			riders[<%=i%>]['special_info']=<%= rider.special_info.to_json %>;
-			riders[<%=i%>]['show']=true;
-			/*GEvent.addListener(riders[<%=i%>]['marker'], "infowindowbeforeclose", function() {
-				riders[<%=i%>]['marker'].zIndex=zIndex--;
-			});
-			riders[<%=i%>]['marker'].bindInfoWindowHtml(makeInfoboxHTML('rider',<%=i%>));
-			map.addOverlay(riders[<%=i%>]['marker']);*/
-		<% end %>
-		locations=<%=@locations.to_json%>;
-		for (var i in locations) {
-			var title="";
-			var comma=false;
-			for (var j=0;j<locations[i]['rides'].length;j++) {
-				var k=locations[i]['rides'][j]['id'];
-				if (comma) {
-					title+=", ";
-				} else {
-					comma=true;
-				}
-				if (locations[i]['rides'][j]['type'] == "driver") {
-					title+=drivers[k]['name'];
-				} else {
-					title+=riders[k]['name'];
-				}
-			}
-			locations[i]['marker']=new GMarker(new GLatLng(locations[i]['latitude'], locations[i]['longitude']), {title: title, zIndexProcess: doZIndex, icon: icon});
-			locations[i]['marker'].zIndex=zIndex--;
-			for (var j=0;j<locations[i]['rides'].length;j++) {
-				var k=locations[i]['rides'][j]['id'];
-				if (locations[i]['rides'][j]['type'] == "driver") {
-					drivers[k]['marker']=locations[i]['marker'];
-					drivers[k]['location']=i;
-				} else {
-					riders[k]['marker']=locations[i]['marker'];
-					riders[k]['location']=i;
-				}
-			}
-			map.addOverlay(locations[i]['marker']);
-		}
-		<% @locations.each do |key, value| %>
-			GEvent.addListener(locations['<%=key%>']['marker'], "infowindowbeforeclose", function() {
-				locations['<%=key%>']['marker'].zIndex=zIndex--;
-				//show['<%=key%>']=locations['<%=key%>']['rides'][0]['id']; // Causes a bug with empty windows when the first one is hidden
-			});
-			GEvent.addListener(locations['<%=key%>']['marker'], "infowindowopen", function() {
-				onMarkerOpen('<%=key%>');
-			});
-			GEvent.addListener(locations['<%=key%>']['marker'], "dblclick", function() {
-				double_click_location('<%=key%>');
-			});
-		<% end %>
-		updateMarkers();
+	function test(){test('testing');}
+
+	function test(value){
+		var v = String(value);
+		alert(v);
 	}
-	google.setOnLoadCallback(initialize);
-
 
 </script>
 
 
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.6.0/build/reset/reset-min.css" /> 
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
-</head>
 
 
 <body onload="<%="displayMessage('flash');" if @message%>setTimeout(updateList, 250);" onunload="GUnload()">
-<div id="size_box"></div>
-<table style="position:absolute;top:5px;left:5px;height:25px;">
-	<tr>
-		<td style="padding:2px 10px;border:1px solid #000000;"><a href="javascript:showHide('legend');">Legend <img src="/images/arrow.png" alt="arrow" /></a></td>
-		<td style="padding:2px 10px;border:1px solid #000000;"><a href="http://wiki.uscm.org/download/attachments/56492347/CRS+RideShare+Feature.ppt?version=1&modificationDate=1262886674000" target="_blank">Help?</a></td>
-	</tr>
-</table>
-<table id="legend" style="display:none;">
-	<tr>
-		<td><img src="/images/AD.png" alt="Available Driver" /></td>
-		<td>Available Driver</td>
-		<td><img src="/images/AR.png" alt="Available Rider" /></td>
-		<td>Available Rider</td>
-		<td><img src="/images/selected.png" alt="Selected" /></td>
-		<td>Selected Driver/Rider</td>
-	</tr>
-	<tr>
-		<td><img src="/images/UD.png" alt="Unavailable Driver" /></td>
-		<td>Driver with Full Car</td>
-		<td><img src="/images/UR.png" alt="Unavailable Rider" /></td>
-		<td>Assigned Rider</td>
-		<td><img src="/images/AD_AR_UD_UR.png" alt="Available Driver, Available Rider, Unavailable Driver, Unavailable Rider" /></td>
-		<td>Location with all four types</td>
-	</tr>
-</table>
+
+<div class="test">
+	<button onClick="test('otehr');">Test</button>
+</div>
+
+<div class="help">
+	<table>
+		<tr>
+			<button onClick="$('legend').toggle();">Legend <img src="/images/arrow.png" alt="arrow" /></a></button>
+			<button><a href="http://wiki.uscm.org/display/CG/Conference+Registration+System+Ride+Share+Tool" target="_blank">Help?</a></button>
+		</tr>
+	</table>	
+<div>
+
+
+<div class="legend">
+	<table id="legend">
+		<tr>
+			<td><img src="/images/AD.png" alt="Available Driver" /></td>
+			<td>Available Driver</td>
+			<td><img src="/images/AR.png" alt="Available Rider" /></td>
+			<td>Available Rider</td>
+			<td><img src="/images/selected.png" alt="Selected" /></td>
+			<td>Selected Driver/Rider</td>
+		</tr>
+		<tr>
+			<td><img src="/images/UD.png" alt="Unavailable Driver" /></td>
+			<td>Driver with Full Car</td>
+			<td><img src="/images/UR.png" alt="Unavailable Rider" /></td>
+			<td>Assigned Rider</td>
+			<td><img src="/images/AD_AR_UD_UR.png" alt="Available Driver, Available Rider, Unavailable Driver, Unavailable Rider" /></td>
+			<td>Location with all four types</td>
+		</tr>
+	</table>
+</div>
+
+
+
 <div id="message_block"></div>
 <div id="flash_message" class="message" style="width:600px;height:360px;">
 	<% if @help_rides.size > 0 %>
@@ -221,6 +77,8 @@
 	<% end %>
 	<a href="javascript:hideMessage('flash');" class="message_exit" onmouseclick="hideMessage('flash');">X</a>
 </div>
+
+
 <div id="hidden_users_message" class="message">
 	<h2>Registrants not Participating in Rideshare</h2>
 	<% i=0 %>
@@ -246,6 +104,8 @@
 		<% end %>
 	<a href="javascript:hideMessage('update_address');" class="message_exit" onmouseclick="hideMessage('update_address');">X</a>
 </div>
+
+
 <div id="driver_help_message" class="message">
 	<h2>Selecting a Driver</h2>
 	To "Select" a driver, click on their name in the list or icon (green) on the map. Click the "Select Driver" link in the pop-up bubble to begin assigning riders to the driver. To assign a rider, click their name/icon and click "Add to Car". To assign riders to a different car, select a different driver using the same method.
@@ -256,6 +116,7 @@
 	By default, only people who need attention are visible (i.e. drivers with empty spaces and riders with no ride), while people who don't need attention are hidden (i.e. drivers with full cars and riders with a ride). The "Show and Hide" link on the bottom left contains options for changing which riders/drivers are displayed. Similarly, people will be displayed based on departure time by using the "Departure Time" link below the lists - all departure times are shown by default.
 	<a href="javascript:hideMessage('filters_help');" class="message_exit" onmouseclick="hideMessage('filters_help');">X</a>
 </div>
+
 <h1 id="header" style="margin-left:auto;margin-right:auto;text-align:center;">Rideshare Admin</h1>
 <div style="position:absolute;top:5px;right:5px;">
 	<a href="/carpool/report" title="This produces a printable list of all of the people organized by drivers">Printable Report</a><br />
@@ -292,6 +153,9 @@
 		<a href="javascript:displayMessage('filters_help');"><strong>Where did they go?</strong></a>
 	</div>
 </div>
+
+
+
 <div id="options_box_departure_time" style="position:absolute;z-index:100;left:5px;bottom:37px;border:1px solid #000000;border-bottom:none;width:429px;height:60px;background-color:#ffffff;display:none;">
 	<form action="javascript:updateDepartureTime();">
 		<table class="room">
@@ -309,6 +173,8 @@
 		</table>
 	</form>
 </div>
+
+
 <div id="options_box_availability" style="position:absolute;z-index:100;left:253px;bottom:37px;border:1px solid #000000;border-bottom:none;width:246px;height:115px;background-color:#ffffff;display:none;">
 	<form action="javascript:updateAvailability();">
 		<table class="room">
@@ -327,14 +193,14 @@
 		</table>
 	</form>
 </div>
-<!--<div id="options" >-->
+
 	<table id="options" class="room" style="position:absolute;left:6px;bottom:5px;width:495px;height:30px;">
 		<tr>
 			<td id="options_departure_time"><a href="javascript:showOption('departure_time');">Departure Time <img src="/images/up_arrow.png" alt="arrow" /></a></td>
 			<td id="options_availability" style="background-color:#bbffbb;"><a href="javascript:showOption('availability');">Show and Hide <img src="/images/up_arrow.png" alt="arrow" style="height:12px;width:12px;vertical-align:middle;" /></a></td>
 		</tr>
 	</table>
-<!--</div>-->
-<!--<div id="copyright" style="position:absolute;left:504px;bottom:5px;right:5px;height:17px;border:1px solid #000000;padding:2px;font-size:13px;text-align:center;">&copy;2009-2011 USCM</div>-->
-</body> 
+
+
+</body>
 </html> 
