--- a/app/assets/stylesheets/carpool.css
+++ b/app/assets/stylesheets/carpool.css
@@ -1,235 +1,48 @@
-/*
-.class
-#id
-element
-[attribute]
-*/
+.top .left .shown {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  height: 25px;
+  border: 2px solid #445566; }
+  .top .left .shown tr td {
+    padding: 2px bold;
+    border: 1px solid black; }
+.top .left .hidden {
+  display: none; }
+.top .center.title {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 25px; }
+.top .right {
+  position: absolute;
+  top: 5px;
+  right: 5px; }
 
-div.test {
-	position:	absolute;
-	top: 50px;
-	left: 10px;
-}
+.message.flash {
+  width: 600px;
+  height: 360px; }
 
-div.help>table{
-	position: absolute;
-	top: 10px;
-	left: 5px;
-	height: 25px;
+#drivers_none {
+  position: absolute;
+  left: 5px;
+  top: 129px;
+  padding: 2px;
+  border: 1px solid black;
+  background-color: #ffbbbb;
+  text-align: center;
+  width: 240px; }
 
-}
-div.help tr td  {
-	padding: 2px 10px;
-	border: 1px solid #000000;
-}
+#drivers_header {
+  position: absolute;
+  left: 5px;
+  top: 100px;
+  padding: 2px;
+  border: 1px solid black; }
 
-div.legend { 
-	display:none; 
-}
-
-
-
-
-h1{
-	font-weight:bold;
-	font-size:3em;
-}
-h2{
-	font-weight:bold;
-	font-size:1.8em;
-	text-align:center;
-	margin-bottom:.5em;
-}
-h3{
-	font-size:20px;
-	height:25px;
-	width:240px;
-	font-weight:bold;
-	background-color:#dddddd;
-	text-align:center;
-}
-h4{
-	font-size:1.2em;
-	font-weight:bold;
-}
-
-#drivers ul, #riders ul{
-	padding:2px;
-}
-#drivers #selected_driver,#riders #selected_riders{
-	border-bottom:2px solid #000000;
-	background-color:#bbffbb;
-}
-
-/* message */
-.message{
-	background-color:#ffffff;
-	border:2px solid #000000;
-	padding:10px;
-	z-index:10000001;
-	overflow:auto;
-	display:none;
-}
-.message a.message_exit{
-	display:block;
-	position:absolute;
-	top:5px;
-	right:8px;
-	font-weight:bold;
-	color:#000000;
-	text-decoration:none;
-}
-#message_block{
-	display:none;
-	background-color:#dddddd;
-	background:url('../images/black25.png');
-	position:absolute;
-	top:0;
-	bottom:0;
-	left:0;
-	right:0;
-	z-index:1000000
-}
-#size_box{
-	position:absolute;
-	top:-20000px;
-	left:-20000px;
-	width:400px;
-}
-
-strong{ font-weight:bold; }
-
-table.room{ width:100%; }
-
-#options { height:100%; }
-
-
-
-table.room th {
-	text-align:center;
-	vertical-align:middle;
-	font-weight:bold;
-	background-color:#dddddd;
-}
-table.room th a {
-	text-decoration:none;
-	color:#000000;
-}
-table.room td,th{
-	text-align:center;
-	vertical-align:middle;
-	padding:2px;
-}
-table.normal td{
-	text-align:left;
-}
-table.room td img{
-	vertical-align:middle;
-}
-#options td{
-	width:25%;
-	border:1px solid #000000;
-}
-body#report{
-	margin:.1in;
-}
-div.marker_tabs{
-	border-bottom:2px solid #000000;
-	padding-bottom:5px;
-	margin-bottom:10px;
-}
-table.report{
-	/*margin:.2in;*/
-	width:100%;
-	page-break-inside:avoid;
-	page-break-after:always;
-	margin-bottom:1em;
-}
-table.report em{
-	font-weight:bold;
-}
-table.report th, table.report td{
-	padding:.02in;
-}
-table.report thead th{
-	font-weight:bold;
-	border:.02in solid #000000;
-	background-color:#e5e5e5;
-}
-table.report thead th h3{
-	width:auto;
-	background-color:transparent;
-}
-table.report tbody td{
-	border:.01in solid #cccccc;
-}
-table.report tbody td.indent{
-	padding-left:.5in;
-}
-table.report tbody td.far_indent{
-	padding-left:1in;
-}
-table.report tbody tr.driver td:first-child{
-	border-left:.02in solid #000000;
-}
-table.report tbody tr.driver td{
-	border-top:.02in solid #000000;
-}
-table.report tbody tr.driver td:last-child{
-	border-right:.02in solid #000000;
-}
-table.report tbody tr.rider td:first-child{
-	border-left:.02in solid #000000;
-}
-table.report tbody tr.rider td:last-child{
-	border-right:.02in solid #000000;
-}
-table.report tbody tr:last-child td{
-	border-bottom:.02in solid #000000;
-}
-table.report tbody td.far_indent{
-	padding-left:1in;
-}
-table.report tbody tr.driver td:first-child{
-	border-left:.02in solid #000000;
-}
-table.report tbody tr.driver td{
-	border-top:.02in solid #000000;
-}
-table.report tbody tr.driver td:last-child{
-	border-right:.02in solid #000000;
-}
-table.report tbody tr.rider td:first-child{
-	border-left:.02in solid #000000;
-}
-table.report tbody tr.rider td:last-child{
-	border-right:.02in solid #000000;
-}
-table.report tbody tr:last-child td{
-	border-bottom:.02in solid #000000;
-}
-table#legend{
-	position:absolute;
-	top:31px;
-	left:5px;
-	border:1px solid #000000;
-	background-color:#ffffff;
-}
-table#legend td{
-	padding:2px;
-}
-table#legend td img{
-	height:25px;
-	width:25px;
-}
-
-
-@media print {
-	BODY { font-size: 9pt}
-	h1   { font-size: 14pt}
-	h2   { font-size: 12pt}
-	h3   { font-size: 10pt}
-	report_table {	page-break-inside:avoid}
-	TABLE {page: auto; page-break-after: right }
-	rider_block { page-break-inside:avoid }
-}
+.map {
+  position: absolute;
+  left: 504px;
+  right: 5px;
+  top: 100px;
+  bottom: 30px; }
