--- a/app/assets/stylesheets/carpool.css
+++ b/app/assets/stylesheets/carpool.css
@@ -1,18 +1,25 @@
 .top .left .shown {
   position: absolute;
-  top: 5px;
+  top: 10px;
   left: 5px;
+  width: 400px;
   height: 25px;
   border: 2px solid #445566; }
   .top .left .shown tr td {
     padding: 2px bold;
     border: 1px solid black; }
 .top .left .hidden {
+  position: absolute;
+  top: 45px;
+  left: 10px;
+  width: 600px;
   display: none;
-  font-size: 12pt; }
+  font-size: 12pt;
+  border: 1px solid black;
+  background-color: white; }
   .top .left .hidden img {
-    height: 50px;
-    width: 50px; }
+    height: 30px;
+    width: 30px; }
 .top .center .title {
   margin-left: auto;
   margin-right: auto;
@@ -23,77 +30,119 @@
   top: 5px;
   right: 5px; }
 
-table#legend {
-  position: relative;
-  top: 31px;
-  left: 5px;
-  border: 1px solid black;
-  background-color: white; }
-  table#legend table#legend td {
-    padding: 2px; }
-    table#legend table#legend td table#legend td img {
-      height: 25px;
-      width: 25px; }
-
 .message .flash {
   width: 600px;
   height: 360px; }
 
 .drivers {
   position: absolute;
-  left: 5px;
   top: 175px;
   bottom: 40px;
-  width: 244px;
+  width: 250px;
   border: 1px solid black;
-  overflow: auto; }
-  .drivers .header {
-    position: relative;
-    left: 5px;
-    padding: 2px;
-    border: 1px solid black; }
-  .drivers #drivers_none {
-    position: relative;
-    left: 5px;
-    padding: 2px;
-    border: 1px solid black;
-    background-color: #ffbbbb;
-    text-align: center;
-    width: 240px; }
+  overflow: auto;
+  left: 5px; }
   .drivers ul {
     padding: 2px; }
+  .drivers .header {
+    position: relative;
+    text-align: center;
+    vertical-align: sub;
+    background-color: #ffbbbb;
+    border: 1px solid black;
+    height: 60px;
+    top: -15px; }
+  .drivers .none {
+    position: relative;
+    height: 50px;
+    text-align: center;
+    border: 1px solid black;
+    background-color: #ffbbbb;
+    top: -31px; }
   .drivers #selected_driver {
+    position: relative;
+    left: 5px;
     border-bottom: 2px solid black;
     background-color: #bbffbb;
-    position: absolute;
-    top: 100px;
-    left: 5px; }
+    display: none; }
+  .drivers #unselected {
+    positive: relative; }
 
-#riders {
+.riders {
   position: absolute;
-  left: 255px;
-  top: 129px;
+  top: 175px;
   bottom: 40px;
-  width: 244px;
+  width: 250px;
   border: 1px solid black;
-  overflow: auto; }
-  #riders ul {
+  overflow: auto;
+  left: 260px; }
+  .riders ul {
     padding: 2px; }
-  #riders #selected_riders {
+  .riders .header {
+    position: relative;
+    text-align: center;
+    vertical-align: sub;
+    background-color: #ffbbbb;
+    border: 1px solid black;
+    height: 60px;
+    top: -15px; }
+  .riders .none {
+    position: relative;
+    height: 50px;
+    text-align: center;
+    border: 1px solid black;
+    background-color: #ffbbbb;
+    top: -36px; }
+  .riders #selected_riders {
+    position: relative;
+    left: 5px;
     border-bottom: 2px solid black;
-    background-color: #bbffbb; }
-  #riders header {
-    position: absolute;
-    left: 255px;
-    top: 100px;
-    padding: 2px;
+    background-color: #bbffbb;
+    display: none; }
+  .riders #unselected {
+    positive: relative; }
+
+/* style="position:absolute;z-index:100;left:5px;bottom:37px;border:1px solid #000000;border-bottom:none;width:429px;height:60px;background-color:#ffffff;display:none; */
+.options {
+  height: 40px; }
+  .options table.room th {
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    background-color: #dddddd; }
+    .options table.room th table.room th a {
+      text-decoration: none;
+      color: black; }
+  .options table.room td, .options th {
+    text-align: center;
+    vertical-align: middle;
+    padding: 2px; }
+  .options table.normal td table.room td img {
+    vertical-align: middle; }
+  .options #options td #departure {
     border: 1px solid black; }
+  .options .showhide {
+    position: relative;
+    left: 6px;
+    bottom: 5px;
+    width: 495px;
+    height: 30px; }
+    .options .showhide #options_box_availability {
+      position: relative;
+      z-index: 100;
+      left: 500px;
+      bottom: 37px;
+      border: 1px solid black;
+      border-bottom: none;
+      width: 120px;
+      height: 115px;
+      background-color: white; }
 
 .map {
   position: absolute;
   left: 504px;
   right: 5px;
-  top: 100px;
+  top: 1000px;
   bottom: 30px; }
 
 .message {
@@ -129,28 +178,6 @@ table#legend {
   top: -20000px;
   left: -20000px;
   width: 400px; }
-
-/* style="position:absolute;z-index:100;left:5px;bottom:37px;border:1px solid #000000;border-bottom:none;width:429px;height:60px;background-color:#ffffff;display:none; */
-#options {
-  height: 40px;
-  width: 25%; }
-  #options table.room th {
-    text-align: center;
-    vertical-align: middle;
-    font-weight: bold;
-    background-color: #dddddd; }
-    #options table.room th table.room th a {
-      text-decoration: none;
-      color: black; }
-  #options table.room td, #options th {
-    text-align: center;
-    vertical-align: middle;
-    padding: 2px; }
-  #options table.normal td table.room td img {
-    vertical-align: middle; }
-  #options #options td {
-    width: 25%;
-    border: 1px solid black; }
 
 body#report {
   margin: 0.1in; }
